# untitled

./: .dockerignore  .env.example  .env.production  .gitignore  .spark-initial-sha  ADMIN-PANEL-ENHANCEMENTS.md  ADVANCED-FEATURES-IMPLEMENTATION.md  ADVANCED_FEATURES_IMPLEMENTATION.md  AUTONOMOUS_DEVELOPMENT_PROTOCOL.md  BlockchainIntegrations.md  CHANGELOG.md  COMPREHENSIVE_PROJECT_STATUS.md  CONTINUATION_FIXES.md  CONTINUATION_SESSION_SUMMARY.md  CURRENT_STATUS_AND_ROADMAP.md  CUSTOM_INDICATOR_BUILDER_COMPLETE.md  CUSTOM_NODE_NAMING_IMPLEMENTATION.md  DATABASE-SETUP.md  DEBUGGING-REPORT.md  DEPLOY.md  DEPLOYMENT-COMPLETE.md  DEPLOYMENT-FIXED.md  DEPLOYMENT-FIXES-SUMMARY.md  DEPLOYMENT-READY.md  DEPLOYMENT-VISUAL-GUIDE.md  DEPLOYMENT.md  Dockerfile  ENV.md  FINAL_FXDREEMA_CATEGORIES.md  FIX-SUMMARY.md  FIXES-APPLIED.md  FIXES-SUMMARY.md  FIXES_IMPLEMENTED.md  IMAGE_INSTRUCTIONS.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PHASE_2.md  IMPLEMENTATION_PHASE_3.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_SESSION.md  (+48 more)
.github/workflows/: docs.yml  vgpu-ci.yml
app/: globals.css  layout.tsx  page-original.tsx  page.tsx
app/(user)/: layout.tsx
app/admin/: layout.tsx  page.tsx
app/blockchain/: page.tsx
app/blog/: page.tsx
app/carbon/: page.tsx
app/cart/: page.tsx
app/checkout/: page.tsx
app/community/: page.tsx
app/contact/: page.tsx
app/homestays/: page.tsx
app/marketplace/: page.tsx
app/privacy/: page.tsx
app/terms/: page.tsx
app/tours/: page.tsx
components/: AboutSection.tsx  BookingForm.tsx  DamChainHighlight.tsx  Footer.tsx  GramPradhanSection.tsx  Header.tsx  Layout.tsx  Leaders.tsx  LeadershipSection.tsx  ParticleBackground.tsx  StatsSidebar.tsx
components/admin/: APIKeyManager.tsx  APIRateLimiting.tsx  ActivityLog.tsx  ActivityTimeline.tsx  AdminLayout.tsx  AmenityManager.tsx  AvailabilityCalendar.tsx  BanSuspend.tsx  BlogActions.tsx  BookingConfirmation.tsx  BookingRules.tsx  BulkActions.tsx  CAPTCHAIntegration.tsx  CDNIntegration.tsx  CategoryHierarchy.tsx  CleaningSchedule.tsx  ComparisonReports.tsx  ConfirmDialog.tsx  ContentScheduler.tsx  ConversionTracking.tsx  CouponManager.tsx  CustomReportBuilder.tsx  DarkModeToggle.tsx  DataEncryption.tsx  DatabaseBackup.tsx  DateRangeSelector.tsx  DraftManagement.tsx  DragDropDashboard.tsx  EmailTemplateEditor.tsx  EmailVerification.tsx  ExportReports.tsx  Favorites.tsx  FeaturedImage.tsx  FileCompression.tsx  GalleryCreator.tsx  GlobalSearch.tsx  GoalTracking.tsx  GuestCheckIn.tsx  GuestDatabase.tsx  HeatmapViewer.tsx  (+61 more)
components/cart/: AddToCartButton.tsx  CartButton.tsx  CartDrawer.tsx  CartItem.tsx  CartSummary.tsx  EmptyCart.tsx
components/checkout/: RazorpayButton.tsx
components/ui/: button.tsx  tabs.tsx
docs/: _config.yml  index.md
docs/01-overview/: PRD.md  README_FOREXFLOW.md
docs/02-architecture/: ARCHITECTURE.md  FXDREEMA_BLOCK_SYSTEM.md  FXDREEMA_COMPLETE_IMPLEMENTATION.md  FXDREEMA_FEATURES_IMPLEMENTATION.md
docs/03-implementation/: CURRENT_STATUS_AND_ROADMAP.md  IMPLEMENTATION_PHASE_4.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  PHASE_3_CHECKLIST.md  PHASE_5_ADVANCED_IMPLEMENTATION.md  PHASE_6_INDICATOR_EXTENSION.md  PHASE_7_FXDREEMA_IMPROVEMENTS.md  PHASE_8_ADVANCED_FEATURES.md  SESSION_IMPLEMENTATION_SUMMARY.md  SESSION_SUMMARY.md
docs/04-guides/: ADVANCED_NODES_IMPLEMENTATION.md  COMPLETE_STRATEGY_EXAMPLES.md  CUSTOM_INDICATOR_IMPLEMENTATION.md  USER_GUIDE.md
docs/05-development/: AUTONOMOUS_DEVELOPMENT_PROTOCOL.md  NEXT_STEPS.md
docs/06-reference/: QUICK_INTEGRATION_REFERENCE.md
docs/enhancement-plan/: ENHANCEMENT_ROADMAP.md  FXDREEMA_RESEARCH.md  PR-01-INTEGRATION-STATUS.md
lib/: auth.ts
lib/cart/: store.ts  types.ts  utils.ts
lib/checkout/: store.ts  types.ts  utils.ts
lib/email/: nodemailer.ts  sendEmail.ts
lib/payment/: razorpay.ts
lib/validations/: auth.ts  user.ts
prisma/: dev.db  schema.prisma  seed.ts
prisma/prisma/: dev.db
scripts/: setup-db.sh  test-blockchain-fixed.ts  test-blockchain-phases-13-25.ts  test-blockchain.ts  test-phases-10-11-12.ts  test-phases-4-5-6.ts  test-phases-7-8-9.ts  verify-deployment.sh
spacewink_vgpu/: ADVANCED_ALGORITHMS.md  CMakeLists.txt  IMPLEMENTATION_PRIORITIES.md  OPERATOR_GUIDE.md  PROJECT_SUMMARY.md  README.md  SAFETY.md  prd.md  prechange_checksums.sha256  pytest.ini  repo_snapshot.txt  requirements.md  requirements.txt  roadmap.md  setup.py  status.md  status_summary.json
spacewink_vgpu/docs/design/: pr-02.md  pr-03.md  pr-04.md  pr-05.md
spacewink_vgpu/prs/: pr-00-repo-audit.md  pr-01-ci-scaffolding.md  pr-02-native-kernels.md  pr-03-blocked-gemm.md  pr-04-threadpool.md  pr-05-tiered-memory.md
spacewink_vgpu/scripts/: check_dependencies.py
spacewink_vgpu/src/bindings/: kernels_bind.cpp  tiered_allocator_bind.cpp
spacewink_vgpu/src/cpp/: vgpu_algorithms.h
spacewink_vgpu/src/cpp/kernels/: matmul_avx2.cpp  matmul_avx2.h  matmul_basic.cpp  matmul_basic.h  matmul_blocked.cpp  matmul_blocked.h
spacewink_vgpu/src/cpp/runtime/: autotuner.cpp  autotuner.h  memory_pool.cpp  memory_pool.h  numa_utils.cpp  numa_utils.h  spill_manager.cpp  spill_manager.h  task.h  threadpool.cpp  threadpool.h  tiered_allocator.cpp  tiered_allocator.h
spacewink_vgpu/src/py/: spectral_methods.py  tensor_network.py  vgpu_runtime.py
spacewink_vgpu/tests/unit/: test_gemm_blocked.py  test_matmul_basic.py  test_spectral_methods.py  test_tensor_network.py  test_threadpool.py  test_tiered_allocator.py
src/: App.tsx  index.css
src/constants/: bucket-nodes.ts  buy-sell-nodes.ts  chart-objects-nodes.ts  controlling-blocks-nodes.ts  counters-nodes.ts  flags-nodes.ts  indicator-conditions.ts  loop-chart-objects-nodes.ts  loop-nodes.ts  node-categories.ts  output-communication-nodes.ts  time-filter-nodes.ts  timeframes.ts  trade-order-count-nodes.ts  trading-actions-nodes.ts  trading-conditions-nodes.ts  trailing-stop-nodes.ts  various-signals-nodes.ts
src/hooks/: use-backtest.ts  use-clipboard.ts  use-history.ts  use-optimization.ts  useKeyboardShortcuts.ts  useSelection.ts  (+1 more)
(+236 files in other folders)
